Regression: Sculpt Mode Smear Brush broken #99231

Closed
opened 2022-06-28 10:36:33 +02:00 by Julien Kaspar · 11 comments
Member

System Information
Operating system: Linux-5.15.0-37-generic-x86_64-with-glibc2.35 64 Bits
Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.73.05

Blender Version
Broken: version: 3.2.1, 3.3.0 f9076f3869
Worked: 3.2, 3.3.0 e6548c03f9

Caused by c55dac9904

Short description of error
The smear brush in sculpt mode doesn't move past the first surface contact when doing a stroke.

**System Information** Operating system: Linux-5.15.0-37-generic-x86_64-with-glibc2.35 64 Bits Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 510.73.05 **Blender Version** Broken: version: 3.2.1, 3.3.0 `f9076f3869` Worked: 3.2, 3.3.0 `e6548c03f9` Caused by c55dac9904 **Short description of error** The smear brush in sculpt mode doesn't move past the first surface contact when doing a stroke.
Author
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar
Author
Member

Added subscriber: @JosephEagar

Added subscriber: @JosephEagar
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, will check when that broke

Can confirm, will check when that broke
Member

Caused by c55dac9904.
Havent checked whats wrong, maybe rethink D15167?

Caused by c55dac9904. Havent checked whats wrong, maybe rethink [D15167](https://archive.blender.org/developer/D15167)?
Philipp Oeser changed title from Sculpt Mode Smear Brush broken to Regression: Sculpt Mode Smear Brush broken 2022-06-28 11:34:16 +02:00
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

And this is broken in 3.2.1 too :/

And this is broken in 3.2.1 too :/

This issue was referenced by 0ff60d75cf

This issue was referenced by 0ff60d75cf05baa583035122890f9486f2917071

This issue was referenced by 2d0877ed7e

This issue was referenced by 2d0877ed7efe4f18fd4ae628d69991246b3019d4
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Joseph Eagar self-assigned this 2022-06-29 06:36:59 +02:00
Thomas Dinges added this to the 3.2 milestone 2023-02-08 15:51:06 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#99231
No description provided.