Fix T99231: Wrong anchored mode test for smear brush